zybes/zybes-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: zybes-ui
spec:
  ports:
    - port: 80
      targetPort: 80
      type: LoadBalancer
  selector:
    app: zybes-ui
