zybes/ingress-route-whoami.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`goapi.zynomi.com`)
      kind: Rule
      services:
        - name: whoami
          port: 80
  tls:
    certResolver: default
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`goapi.zynomi.com`)
      kind: Rule
      services:
        - name: whoami
          port: 80
      middlewares:
        - name: https-redirect
