zybes/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
acme.cert-manager.io/http01-edit-in-place: "true"
metadata:
  name: ingressroutetls
  namespace: default
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`app.rasp.zynomi.com`)
      kind: Rule
      services:
        - name: zybes-svc
          port: 80
  tls:
    secretName: k3s-app-rasp-zynomi-com-tls
    certResolver: default
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`app.rasp.zynomi.com`)
      kind: Rule
      services:
        - name: zybes-svc
          port: 80
      middlewares:
        - name: https-redirect
